# bmi-calculator

./: Cargo.toml  README.md
src/: 0.c  main.rs
